fix(register): fix loader position on mobile devices

--- a/pages/auth/register/Register.less
+++ b/pages/auth/register/Register.less
@@ -25,7 +25,6 @@
     }
     .registration-body {
       &:extend(.full-width);
-      height: @full;
     }
   }
   .create-server-button {
